# spectral-atmosphere-research

./: README.md
renderer/: .gitignore  CMakeLists.txt  README.md  main.cpp
renderer/app/: CMakeLists.txt
renderer/app/inc/: app.h  camera.h  datatypes.h  file_saver.h  helper.h  timing_query_pool.h  world_time.h
renderer/app/shaders/: atmosphere_constants.glsl  atmosphere_functions.glsl  basic_color.frag  basic_transform.vert  fsquad.vert  math_constants.glsl  math_functions.glsl  multiple_scattering.frag  sky_color.frag  sky_color_hdr.frag  sky_color_sdr.frag  skyview.frag  spectral_constants.glsl  spectral_functions.glsl  transmittanceLUT.frag
renderer/app/src/: app.cpp  file_saver.cpp  timing_query_pool.cpp  world_time.cpp
